@@ -34,7 +34,11 @@
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
-					<compilerArgs>--enable-preview</compilerArgs>
+					<compilerArgs>
+						<arg>--enable-preview</arg>
+						<arg>--add-modules</arg>
+						<arg>jdk.incubator.foreign</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
